--- a/plugin.xml
+++ b/plugin.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="cordova-plugin-pause-resume-download" version="1.0.1">
+    id="cordova-plugin-pause-resume-download" version="1.0.2">
     <name>cordova plugin pause resume download file</name>
     <description>Use the way Pause And Resume to download files for Cordova/PhoneGap</description>
     <license>Apache 2.0</license>
     <keywords>cordova,android,pause,and,resume,download,file,files</keywords>
 
+    <hook src="hooks/appBeforeBuild2MakePRD.js" type="before_build"/>
+    <dependency id="cordova-plugin-file-transfer" version="1.2.1" />
     <!-- info -->
     <info>
     </info>
